fix desktop hr line alignment

--- a/src/modules/businessSetup/css/businessSetup.scss
+++ b/src/modules/businessSetup/css/businessSetup.scss
@@ -3,6 +3,11 @@
     max-width: 445px;
     margin: 45px auto;
 
+    hr.double-wide{
+      position:relative;
+      top:20px;
+    }
+    
     .icon-cross{
       font-size: 16px;
       font-weight: bold;
@@ -85,6 +90,7 @@
         margin-top: 25px;
       }
     }
+
   [state^="businessSetup"] {
 
     max-width: 100%;
